src/objects/IRIS_Submission_Region__c.object
<CustomObject>
    <description>Junction object between Region and Compliance Submission.</description>
    <fields>
        <fullName>Compliance_Submission__c</fullName>
        <description>Stores compliance Submission record.</description>
        <label>Compliance Submission</label>
        <referenceTo>IRIS_Submission__c</referenceTo>
        <relationshipLabel>Submission Regions</relationshipLabel>
        <relationshipName>Submission_Regions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <formula>Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store reference to the region object.</description>
        <label>Region</label>
        <referenceTo>IRIS_Region__c</referenceTo>
        <relationshipLabel>Submission Regions</relationshipLabel>
        <relationshipName>Submission_Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submission_Decision__c</fullName>
        <formula>Text(Compliance_Submission__r.Decision_Taken__c)</formula>
        <label>Submission Decision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Name__c</fullName>
        <formula>Compliance_Submission__r.Document_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submission Name</label>
        <type>Text</type>
    </fields>
    <label>Submission Region</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Submission Region Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission Regions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>